# RS1_Individual

./: CMakeLists.txt  bb  main.cpp  robot  something  testing
environment/: map.bt  map.pcd  map.yaml  my_map.pgm  my_map.yaml  sprint3.pgm  sprint3.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
sprint3/src/: object_identifier.cpp
